--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.10.3",
     "recharts": "^2.15.1",
+    "shaka-player": "^4.16.9",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
